footer spacing for mobile fixed, prj wrfrm pt fixed

--- a/style.css
+++ b/style.css
@@ -3131,6 +3131,9 @@ p {
 }
 
 @media (max-width: 1024px) {
+  .body.other-pages{
+    padding-top: 102px;
+  }
   .oyn-row.nav-row {
     -webkit-box-align: center;
     -webkit-align-items: center;
@@ -3555,10 +3558,7 @@ p {
   .about-client {
     margin-top: 32px;
   }
-  .footer {
-    margin-top: 42px;
-    margin-bottom: 0px;
-  }
+
   .image-3 {
     max-width: 100%;
   }
